# freya-party

./: .env.example  .firebaserc  .gitignore  Makefile  README.md  cors.json  firestore.rules  index.html  package-lock.json  package.json  quest_game.jsx  storage.rules  tailwind.config.js
api/: submissions.js
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  guest.py  party.py  quest.py  stripe_event.py  submission.py  user.py
backend/app/routes/: billing.py  clerk_webhook.py  host_submissions.py  me.py  parties.py  public.py
backend/app/schemas/: party.py  public.py  user.py
backend/app/security/: clerk.py  guest.py  subscription.py
backend/app/services/: billing.py  guests.py  join_code.py  parties.py  storage.py  submissions.py
backend/tests/: test_root.py
scripts/: count_submissions.py  download-all.js  export-to-google-photos.js  migrate_freya_to_pg.py
src/: App.jsx  QuestGame.jsx  i18n.js  index.css  main.jsx
src/components/: CompassRose.jsx  JournalShell.jsx  Stamp.jsx
src/lib/: api.js  env.js  guestSession.js  icons.js
src/locales/: de.json  en.json
src/routes/: BillingReturn.jsx  Landing.jsx
src/routes/guest/: GuestParty.jsx
src/routes/host/: Dashboard.jsx  PartyEditor.jsx  PartySubmissions.jsx
