[project]
name = "freya-party-backend"
version = "0.1.0"
description = "Multi-tenant photo-hunt SaaS backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "stripe>=11.1",
    "boto3>=1.35",
    "python-ulid>=3.0",
    "slowapi>=0.1.9",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
# Only needed to run the one-off Firestore -> Postgres + R2 migration at
# scripts/migrate_freya_to_pg.py. Not shipped in the Docker image.
migration = [
    "firebase-admin>=6.5",
]

[tool.uv]
# Application layout — we import `app` directly rather than installing
# the project as a distribution.
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
